--- a/composer.json
+++ b/composer.json
@@ -6,12 +6,13 @@
     "type": "project",
     "require": {
         "php": "^7.1.3",
+        "danganf/default-vendor-laravel": "dev-master",
+        "darkaonline/l5-swagger": "5.8.*",
         "fideloper/proxy": "^4.0",
+        "jansenfelipe/faker-br": "^1.0",
         "laravel/framework": "5.8.*",
         "laravel/tinker": "~1.0",
         "predis/predis": "^1.1",
-        "danganf/default-vendor-laravel": "dev-master",
-        "darkaonline/l5-swagger": "5.8.*",
         "zircote/swagger-php": "2.*"
     },
     "require-dev": {
