--- a/envvars/hmg.env
+++ b/envvars/hmg.env
@@ -6,3 +6,10 @@ APP_LOG_LEVEL=debug
 APP_URL=http://dashboard.test
 
 CACHE_DRIVER=file
+
+DB_CONNECTION=mysql
+DB_HOST=127.0.0.1
+DB_PORT=3306
+DB_DATABASE=pdv_test
+DB_USERNAME=root
+DB_PASSWORD=
